--- a/documentation/classes/InstagramAPI-Response-Model-AymfItem.html
+++ b/documentation/classes/InstagramAPI-Response-Model-AymfItem.html
@@ -12212,6 +12212,7 @@
     &#039;feed_survey_integration_id&#039; =&gt; &#039;string&#039;,
     &#039;track&#039; =&gt; &#039;Track&#039;,
     &#039;metadata&#039; =&gt; &#039;Metadata&#039;,
+    &#039;broadcast&#039; =&gt; &#039;Broadcast&#039;,
 ]</span>
     </code>
             
@@ -57806,7 +57807,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/Model/Item.php"><a href="../files/src-response-model-item.html"><abbr title="src/Response/Model/Item.php">Item.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">970</span>
+        <span class="phpdocumentor-element-found-in__line">971</span>
     </aside>
         <p class="phpdocumentor-summary">Get the web URL for this media item.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -57835,7 +57836,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/Model/Item.php"><a href="../files/src-response-model-item.html"><abbr title="src/Response/Model/Item.php">Item.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">980</span>
+        <span class="phpdocumentor-element-found-in__line">981</span>
     </aside>
         <p class="phpdocumentor-summary">Checks whether this media item is an advertisement.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
