--- a/documentation/classes/InstagramAPI-Response-Model-Broadcast.html
+++ b/documentation/classes/InstagramAPI-Response-Model-Broadcast.html
@@ -748,6 +748,11 @@
     &#039;seen_ranked_position&#039; =&gt; &#039;&#039;,
     &#039;viewer_count&#039; =&gt; &#039;int&#039;,
     &#039;dash_manifest&#039; =&gt; &#039;string&#039;,
+    &#039;progressive_playback_url&#039; =&gt; &#039;string&#039;,
+    &#039;last_seen_broadcast_ts&#039; =&gt; &#039;string&#039;,
+    &#039;can_reply&#039; =&gt; &#039;bool&#039;,
+    &#039;can_reshare&#039; =&gt; &#039;bool&#039;,
+    &#039;can_share_to_igtv&#039; =&gt; &#039;bool&#039;,
     /*
      * Unix timestamp of when the &quot;post_live&quot; will expire.
      */
@@ -1325,6 +1330,11 @@
     &#039;seen_ranked_position&#039; =&gt; &#039;&#039;,
     &#039;viewer_count&#039; =&gt; &#039;int&#039;,
     &#039;dash_manifest&#039; =&gt; &#039;string&#039;,
+    &#039;progressive_playback_url&#039; =&gt; &#039;string&#039;,
+    &#039;last_seen_broadcast_ts&#039; =&gt; &#039;string&#039;,
+    &#039;can_reply&#039; =&gt; &#039;bool&#039;,
+    &#039;can_reshare&#039; =&gt; &#039;bool&#039;,
+    &#039;can_share_to_igtv&#039; =&gt; &#039;bool&#039;,
     /*
      * Unix timestamp of when the &quot;post_live&quot; will expire.
      */
