--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -551,6 +551,8 @@
                 <dd>Core class for Instagram API responses.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-LiveArchiveSettingsResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveSettingsResponse">LiveArchiveSettingsResponse</abbr></a></dt>
                 <dd>Core class for Instagram API responses.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-LiveArchiveResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveResponse">LiveArchiveResponse</abbr></a></dt>
+                <dd>Core class for Instagram API responses.</dd>
             
                     </dl>
     
