--- a/documentation/classes/InstagramAPI-Response-Model-ChallengeFields.html
+++ b/documentation/classes/InstagramAPI-Response-Model-ChallengeFields.html
@@ -195,7 +195,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-Model-ChallengeFields.html#constant_JSON_PROPERTY_MAP">JSON_PROPERTY_MAP</a></th>
                     <td class="phpdocumentor-cell"></td>
-                    <td class="phpdocumentor-cell">[&#039;g-recaptcha-response&#039; =&gt; &#039;string&#039;, &#039;disable_num_days_remaining&#039; =&gt; &#039;int&#039;, &#039;sitekey&#039; =&gt; &#039;string&#039;, &#039;code_whitelisted&#039; =&gt; &#039;bool&#039;]</td>
+                    <td class="phpdocumentor-cell">[&#039;g-recaptcha-response&#039; =&gt; &#039;string&#039;, &#039;disable_num_days_remaining&#039; =&gt; &#039;int&#039;, &#039;sitekey&#039; =&gt; &#039;string&#039;, &#039;code_whitelisted&#039; =&gt; &#039;bool&#039;, &#039;security_code&#039; =&gt; &#039;string&#039;, &#039;sms_resend_delay&#039; =&gt; &#039;int&#039;, &#039;phone_number_preview&#039; =&gt; &#039;string&#039;, &#039;resend_delay&#039; =&gt; &#039;int&#039;, &#039;form_type&#039; =&gt; &#039;string&#039;]</td>
                 </tr>
                                                                                         <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-Model-ChallengeFields.html#method_getCodeWhitelisted">getCodeWhitelisted()</a></th>
@@ -299,7 +299,7 @@
         <span class="phpdocumentor-signature__visibility">public</span>
         <span class="phpdocumentor-signature__type">mixed</span>
         <span class="phpdocumentor-signature__name">$JSON_PROPERTY_MAP</span>
-        = <span class="phpdocumentor-signature__default-value">[&#039;g-recaptcha-response&#039; =&gt; &#039;string&#039;, &#039;disable_num_days_remaining&#039; =&gt; &#039;int&#039;, &#039;sitekey&#039; =&gt; &#039;string&#039;, &#039;code_whitelisted&#039; =&gt; &#039;bool&#039;]</span>
+        = <span class="phpdocumentor-signature__default-value">[&#039;g-recaptcha-response&#039; =&gt; &#039;string&#039;, &#039;disable_num_days_remaining&#039; =&gt; &#039;int&#039;, &#039;sitekey&#039; =&gt; &#039;string&#039;, &#039;code_whitelisted&#039; =&gt; &#039;bool&#039;, &#039;security_code&#039; =&gt; &#039;string&#039;, &#039;sms_resend_delay&#039; =&gt; &#039;int&#039;, &#039;phone_number_preview&#039; =&gt; &#039;string&#039;, &#039;resend_delay&#039; =&gt; &#039;int&#039;, &#039;form_type&#039; =&gt; &#039;string&#039;]</span>
     </code>
             
 </article>
