--- a/documentation/classes/InstagramAPI-Response-WebCheckpointResponse.html
+++ b/documentation/classes/InstagramAPI-Response-WebCheckpointResponse.html
@@ -194,7 +194,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-WebCheckpointResponse.html#constant_JSON_PROPERTY_MAP">JSON_PROPERTY_MAP</a></th>
                     <td class="phpdocumentor-cell"></td>
-                    <td class="phpdocumentor-cell">[&#039;entry_data&#039; =&gt; &#039;Model\\ChallengeEntryData&#039;]</td>
+                    <td class="phpdocumentor-cell">[&#039;entry_data&#039; =&gt; &#039;Model\\ChallengeEntryData&#039;, &#039;challenge&#039; =&gt; &#039;Model\\WebChallenge&#039;]</td>
                 </tr>
                                                                 <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response.html#property_httpResponse">$httpResponse</a></th>
@@ -408,7 +408,7 @@
         <span class="phpdocumentor-signature__visibility">public</span>
         <span class="phpdocumentor-signature__type">mixed</span>
         <span class="phpdocumentor-signature__name">$JSON_PROPERTY_MAP</span>
-        = <span class="phpdocumentor-signature__default-value">[&#039;entry_data&#039; =&gt; &#039;Model\\ChallengeEntryData&#039;]</span>
+        = <span class="phpdocumentor-signature__default-value">[&#039;entry_data&#039; =&gt; &#039;Model\\ChallengeEntryData&#039;, &#039;challenge&#039; =&gt; &#039;Model\\WebChallenge&#039;]</span>
     </code>
             
 </article>
@@ -606,7 +606,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/WebCheckpointResponse.php"><a href="../files/src-response-webcheckpointresponse.html"><abbr title="src/Response/WebCheckpointResponse.php">WebCheckpointResponse.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">33</span>
+        <span class="phpdocumentor-element-found-in__line">34</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -634,7 +634,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/WebCheckpointResponse.php"><a href="../files/src-response-webcheckpointresponse.html"><abbr title="src/Response/WebCheckpointResponse.php">WebCheckpointResponse.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">38</span>
+        <span class="phpdocumentor-element-found-in__line">43</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -662,7 +662,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/WebCheckpointResponse.php"><a href="../files/src-response-webcheckpointresponse.html"><abbr title="src/Response/WebCheckpointResponse.php">WebCheckpointResponse.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">43</span>
+        <span class="phpdocumentor-element-found-in__line">52</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -690,7 +690,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/WebCheckpointResponse.php"><a href="../files/src-response-webcheckpointresponse.html"><abbr title="src/Response/WebCheckpointResponse.php">WebCheckpointResponse.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">48</span>
+        <span class="phpdocumentor-element-found-in__line">57</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
