--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -550,9 +550,9 @@
                             <dt><a href="../classes/InstagramAPI-Response-GetMusicGenresResponse.html"><abbr title="\InstagramAPI\Response\GetMusicGenresResponse">GetMusicGenresResponse</abbr></a></dt>
                 <dd>Core class for Instagram API responses.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-LiveArchiveSettingsResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveSettingsResponse">LiveArchiveSettingsResponse</abbr></a></dt>
-                <dd>Core class for Instagram API responses.</dd>
+                <dd>LiveArchiveSettingsResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-LiveArchiveResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveResponse">LiveArchiveResponse</abbr></a></dt>
-                <dd>Core class for Instagram API responses.</dd>
+                <dd>LiveArchiveResponse.</dd>
             
                     </dl>
     
