--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -553,6 +553,8 @@
                 <dd>LiveArchiveSettingsResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-LiveArchiveResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveResponse">LiveArchiveResponse</abbr></a></dt>
                 <dd>LiveArchiveResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-TwoFactorNotificationStatusResponse.html"><abbr title="\InstagramAPI\Response\TwoFactorNotificationStatusResponse">TwoFactorNotificationStatusResponse</abbr></a></dt>
+                <dd>Core class for Instagram API responses.</dd>
             
                     </dl>
     
