--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -394,8 +394,8 @@
                     <li><a href="../files/src-response-model-ioslinks.html"><abbr title="src/Response/Model/IOSLinks.php">IOSLinks.php</abbr></a></li>
                     <li><a href="../files/src-response-model-iabautofilloptoutinfo.html"><abbr title="src/Response/Model/IabAutofillOptoutInfo.php">IabAutofillOptoutInfo.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-ieforcesetnewpasswordformexception.html"><abbr title="src/Exception/Checkpoint/IeForceSetNewPasswordFormException.php">IeForceSetNewPasswordFormException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-imagecandidate.html"><abbr title="src/Response/Model/ImageCandidate.php">ImageCandidate.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image-versions2.html"><abbr title="src/Response/Model/Image_Versions2.php">Image_Versions2.php</abbr></a></li>
                     <li><a href="../files/src-response-model-in.html"><abbr title="src/Response/Model/In.php">In.php</abbr></a></li>
@@ -412,8 +412,8 @@
                     <li><a href="../files/src-media-photo-instagramphoto.html"><abbr title="src/Media/Photo/InstagramPhoto.php">InstagramPhoto.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramthumbnail.html"><abbr title="src/Media/Video/InstagramThumbnail.php">InstagramThumbnail.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramvideo.html"><abbr title="src/Media/Video/InstagramVideo.php">InstagramVideo.php</abbr></a></li>
-                    <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-request-internal.html"><abbr title="src/Request/Internal.php">Internal.php</abbr></a></li>
+                    <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-exception-internalexception.html"><abbr title="src/Exception/InternalException.php">InternalException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invalidargumentexception.html"><abbr title="src/Exception/InvalidArgumentException.php">InvalidArgumentException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invalidsmscodeexception.html"><abbr title="src/Exception/InvalidSmsCodeException.php">InvalidSmsCodeException.php</abbr></a></li>
@@ -449,8 +449,8 @@
                     <li><a href="../files/src-realtime-subscription-skywalker-livesubscription.html"><abbr title="src/Realtime/Subscription/Skywalker/LiveSubscription.php">LiveSubscription.php</abbr></a></li>
                     <li><a href="../files/src-response-model-livevideoshare.html"><abbr title="src/Response/Model/LiveVideoShare.php">LiveVideoShare.php</abbr></a></li>
                     <li><a href="../files/src-response-model-liveviewerinvite.html"><abbr title="src/Response/Model/LiveViewerInvite.php">LiveViewerInvite.php</abbr></a></li>
-                    <li><a href="../files/src-request-location.html"><abbr title="src/Request/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-response-model-location.html"><abbr title="src/Response/Model/Location.php">Location.php</abbr></a></li>
+                    <li><a href="../files/src-request-location.html"><abbr title="src/Request/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-response-locationfeedresponse.html"><abbr title="src/Response/LocationFeedResponse.php">LocationFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-locationinforesponse.html"><abbr title="src/Response/LocationInfoResponse.php">LocationInfoResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-locationitem.html"><abbr title="src/Response/Model/LocationItem.php">LocationItem.php</abbr></a></li>
@@ -602,8 +602,8 @@
                     <li><a href="../files/src-response-recoveryresponse.html"><abbr title="src/Response/RecoveryResponse.php">RecoveryResponse.php</abbr></a></li>
                     <li><a href="../files/src-media-geometry-rectangle.html"><abbr title="src/Media/Geometry/Rectangle.php">Rectangle.php</abbr></a></li>
                     <li><a href="../files/src-settings-storage-redis.html"><abbr title="src/Settings/Storage/Redis.php">Redis.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-reelmediaviewerresponse.html"><abbr title="src/Response/ReelMediaViewerResponse.php">ReelMediaViewerResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reelmention.html"><abbr title="src/Response/Model/ReelMention.php">ReelMention.php</abbr></a></li>
                     <li><a href="../files/src-response-reelsettingsresponse.html"><abbr title="src/Response/ReelSettingsResponse.php">ReelSettingsResponse.php</abbr></a></li>
@@ -693,8 +693,8 @@
                     <li><a href="../files/src-settings-storageinterface.html"><abbr title="src/Settings/StorageInterface.php">StorageInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-stories.html"><abbr title="src/Response/Model/Stories.php">Stories.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storiesnetego.html"><abbr title="src/Response/Model/StoriesNetego.php">StoriesNetego.php</abbr></a></li>
-                    <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
+                    <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-storyanswersresponse.html"><abbr title="src/Response/StoryAnswersResponse.php">StoryAnswersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storyappattribution.html"><abbr title="src/Response/Model/StoryAppAttribution.php">StoryAppAttribution.php</abbr></a></li>
                     <li><a href="../files/src-response-storycharitiesresponse.html"><abbr title="src/Response/StoryCharitiesResponse.php">StoryCharitiesResponse.php</abbr></a></li>
@@ -758,8 +758,8 @@
                     <li><a href="../files/src-response-tagsstoryresponse.html"><abbr title="src/Response/TagsStoryResponse.php">TagsStoryResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-tallies.html"><abbr title="src/Response/Model/Tallies.php">Tallies.php</abbr></a></li>
                     <li><a href="../files/src-response-model-template.html"><abbr title="src/Response/Model/Template.php">Template.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-text.html"><abbr title="src/Response/Model/Text.php">Text.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-text.html"><abbr title="src/Response/Model/Bloks/Text.php">Text.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-text.html"><abbr title="src/Response/Model/Text.php">Text.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-textthemedcolor.html"><abbr title="src/Response/Model/Bloks/TextThemedColor.php">TextThemedColor.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-themedcolor.html"><abbr title="src/Response/Model/Bloks/ThemedColor.php">ThemedColor.php</abbr></a></li>
                     <li><a href="../files/src-response-model-thread.html"><abbr title="src/Response/Model/Thread.php">Thread.php</abbr></a></li>
@@ -785,6 +785,7 @@
                     <li><a href="../files/src-response-model-twobytwoitem.html"><abbr title="src/Response/Model/TwoByTwoItem.php">TwoByTwoItem.php</abbr></a></li>
                     <li><a href="../files/src-response-model-twofactorinfo.html"><abbr title="src/Response/Model/TwoFactorInfo.php">TwoFactorInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-twofactorloginsmsresponse.html"><abbr title="src/Response/TwoFactorLoginSMSResponse.php">TwoFactorLoginSMSResponse.php</abbr></a></li>
+                    <li><a href="../files/src-response-twofactornotificationstatusresponse.html"><abbr title="src/Response/TwoFactorNotificationStatusResponse.php">TwoFactorNotificationStatusResponse.php</abbr></a></li>
                 </ul>
                                     <h3>U</h3>
         <ul class="phpdocumentor-list">
