--- a/documentation/classes/InstagramAPI-Request-Music.html
+++ b/documentation/classes/InstagramAPI-Request-Music.html
@@ -120,7 +120,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Request-Music.html#method_getGenres">getGenres()</a></th>
                     <td class="phpdocumentor-cell">Get music genres.</td>
-                    <td class="phpdocumentor-cell"><a href="../classes/InstagramAPI-Response-GetMusicGenresResponse.html"><abbr title="\InstagramAPI\Response\GetMusicGenresResponse">GetMusicGenresResponse</abbr></a></td>
+                    <td class="phpdocumentor-cell"><a href="../classes/InstagramAPI-Response-MusicGenresResponse.html"><abbr title="\InstagramAPI\Response\MusicGenresResponse">MusicGenresResponse</abbr></a></td>
                 </tr>
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Request-Music.html#method_getMoods">getMoods()</a></th>
@@ -445,7 +445,7 @@ lyrics.</p></section>
                 <span class="phpdocumentor-signature__argument__return-type">string</span>
                             </span>
                 )
-        : <span class="phpdocumentor-signature__response_type"><a href="../classes/InstagramAPI-Response-GetMusicGenresResponse.html"><abbr title="\InstagramAPI\Response\GetMusicGenresResponse">GetMusicGenresResponse</abbr></a></span>
+        : <span class="phpdocumentor-signature__response_type"><a href="../classes/InstagramAPI-Response-MusicGenresResponse.html"><abbr title="\InstagramAPI\Response\MusicGenresResponse">MusicGenresResponse</abbr></a></span>
     </code>
 
     
@@ -471,7 +471,7 @@ lyrics.</p></section>
 
 
             <h5 class="phpdocumentor-return-value__heading">Return values</h5>
-        <span class="phpdocumentor-signature__response_type"><a href="../classes/InstagramAPI-Response-GetMusicGenresResponse.html"><abbr title="\InstagramAPI\Response\GetMusicGenresResponse">GetMusicGenresResponse</abbr></a></span>
+        <span class="phpdocumentor-signature__response_type"><a href="../classes/InstagramAPI-Response-MusicGenresResponse.html"><abbr title="\InstagramAPI\Response\MusicGenresResponse">MusicGenresResponse</abbr></a></span>
             
 </article>
                                     <a id="method_getMoods"></a>
