--- a/documentation/classes/InstagramAPI-Response-Model-ChainingSuggestion.html
+++ b/documentation/classes/InstagramAPI-Response-Model-ChainingSuggestion.html
@@ -10058,6 +10058,8 @@
     &#039;gating&#039; =&gt; &#039;Gating&#039;,
     &#039;fbid_v2&#039; =&gt; &#039;string&#039;,
     &#039;page_id_for_new_suma_biz_account&#039; =&gt; &#039;string&#039;,
+    &#039;interop_user_type&#039; =&gt; &#039;int&#039;,
+    &#039;interop_messaging_user_fbid&#039; =&gt; &#039;string&#039;,
 ]</span>
     </code>
             
