--- a/documentation/files/src-response-musicgenresresponse.html
+++ b/documentation/files/src-response-musicgenresresponse.html
@@ -76,7 +76,7 @@
             <h3>Interfaces, Classes and Traits</h3>
         <dl>
             
-                            <dt><a href="../classes/InstagramAPI-Response-GetMusicGenresResponse.html"><abbr title="\InstagramAPI\Response\GetMusicGenresResponse">GetMusicGenresResponse</abbr></a></dt>
+                            <dt><a href="../classes/InstagramAPI-Response-MusicGenresResponse.html"><abbr title="\InstagramAPI\Response\MusicGenresResponse">MusicGenresResponse</abbr></a></dt>
                 <dd>Core class for Instagram API responses.</dd>
             
                     </dl>
