--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -547,7 +547,7 @@
                 <dd>SegmentationModelsResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-HasInteropUpgradedResponse.html"><abbr title="\InstagramAPI\Response\HasInteropUpgradedResponse">HasInteropUpgradedResponse</abbr></a></dt>
                 <dd>HasInteropUpgradedResponse.</dd>
-                            <dt><a href="../classes/InstagramAPI-Response-GetMusicGenresResponse.html"><abbr title="\InstagramAPI\Response\GetMusicGenresResponse">GetMusicGenresResponse</abbr></a></dt>
+                            <dt><a href="../classes/InstagramAPI-Response-MusicGenresResponse.html"><abbr title="\InstagramAPI\Response\MusicGenresResponse">MusicGenresResponse</abbr></a></dt>
                 <dd>Core class for Instagram API responses.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-LiveArchiveSettingsResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveSettingsResponse">LiveArchiveSettingsResponse</abbr></a></dt>
                 <dd>LiveArchiveSettingsResponse.</dd>
